check_output.txt
    Checking mapmap-ui v0.1.0 (/app/crates/mapmap-ui)
error[E0308]: arguments to this function are incorrect
    --> crates/mapmap-ui/src/lib.rs:137:24
     |
 137 |         let renderer = Renderer::new(&mut imgui, device, queue, renderer_config);
     |                        ^^^^^^^^^^^^^             ------  ----- expected `wgpu::Queue`, found a different `wgpu::Queue`
     |                                                  |
     |                                                  expected `wgpu::Device`, found a different `wgpu::Device`
     |
note: two different versions of crate `wgpu` are being used; two types coming from two different versions of the same crate are different types even if they look the same
    --> /home/jules/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/wgpu-0.17.2/src/lib.rs:160:1
     |
 160 | pub struct Device {
     | ^^^^^^^^^^^^^^^^^ this is the expected type `wgpu::Device`
     |
    ::: /home/jules/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/wgpu-0.19.4/src/lib.rs:224:1
     |
 224 | pub struct Device {
     | ^^^^^^^^^^^^^^^^^ this is the found type `wgpu::Device`
     |
    ::: crates/mapmap-ui/src/lib.rs:39:5
     |
  39 | use imgui_wgpu::{Renderer, RendererConfig};
     |     ---------- one version of crate `wgpu` used here, as a dependency of crate `imgui_wgpu`
...
 118 |         device: &wgpu::Device,
     |                  ---- one version of crate `wgpu` used here, as a direct dependency of the current crate
     = help: you can use `cargo tree` to explore your dependency tree
note: two different versions of crate `wgpu` are being used; two types coming from two different versions of the same crate are different types even if they look the same
    --> /home/jules/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/wgpu-0.17.2/src/lib.rs:884:1
     |
 884 | pub struct Queue {
     | ^^^^^^^^^^^^^^^^ this is the expected type `wgpu::Queue`
     |
    ::: /home/jules/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/wgpu-0.19.4/src/lib.rs:1020:1
     |
1020 | pub struct Queue {
     | ^^^^^^^^^^^^^^^^ this is the found type `wgpu::Queue`
     |
    ::: crates/mapmap-ui/src/lib.rs:39:5
     |
  39 | use imgui_wgpu::{Renderer, RendererConfig};
     |     ---------- one version of crate `wgpu` used here, as a dependency of crate `imgui_wgpu`
...
 118 |         device: &wgpu::Device,
     |                  ---- one version of crate `wgpu` used here, as a direct dependency of the current crate
     = help: you can use `cargo tree` to explore your dependency tree
note: associated function defined here
    --> /home/jules/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/imgui-wgpu-0.24.0/src/lib.rs:356:12
     |
 356 |     pub fn new(
     |            ^^^

error[E0308]: mismatched types
   --> crates/mapmap-ui/src/lib.rs:185:28
    |
185 |                     store: true,
    |                            ^^^^ expected `StoreOp`, found `bool`

error[E0063]: missing fields `occlusion_query_set` and `timestamp_writes` in initializer of `wgpu::RenderPassDescriptor<'_, '_>`
   --> crates/mapmap-ui/src/lib.rs:178:58
    |
178 |         let mut render_pass = encoder.begin_render_pass(&wgpu::RenderPassDescriptor {
    |                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `occlusion_query_set` and `timestamp_writes`

error[E0308]: arguments to this method are incorrect
    --> crates/mapmap-ui/src/lib.rs:193:14
     |
 193 |             .render(draw_data, queue, device, &mut render_pass)
     |              ^^^^^^            -----  ------  ---------------- expected `wgpu::RenderPass<'_>`, found a different `wgpu::RenderPass<'_>`
     |                                |      |
     |                                |      expected `wgpu::Device`, found a different `wgpu::Device`
     |                                expected `wgpu::Queue`, found a different `wgpu::Queue`
     |
note: two different versions of crate `wgpu` are being used; two types coming from two different versions of the same crate are different types even if they look the same
    --> /home/jules/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/wgpu-0.17.2/src/lib.rs:884:1
     |
 884 | pub struct Queue {
     | ^^^^^^^^^^^^^^^^ this is the expected type `wgpu::Queue`
     |
    ::: /home/jules/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/wgpu-0.19.4/src/lib.rs:1020:1
     |
1020 | pub struct Queue {
     | ^^^^^^^^^^^^^^^^ this is the found type `wgpu::Queue`
     |
    ::: crates/mapmap-ui/src/lib.rs:39:5
     |
  39 | use imgui_wgpu::{Renderer, RendererConfig};
     |     ---------- one version of crate `wgpu` used here, as a dependency of crate `imgui_wgpu`
...
 118 |         device: &wgpu::Device,
     |                  ---- one version of crate `wgpu` used here, as a direct dependency of the current crate
     = help: you can use `cargo tree` to explore your dependency tree
note: two different versions of crate `wgpu` are being used; two types coming from two different versions of the same crate are different types even if they look the same
    --> /home/jules/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/wgpu-0.17.2/src/lib.rs:160:1
     |
 160 | pub struct Device {
     | ^^^^^^^^^^^^^^^^^ this is the expected type `wgpu::Device`
     |
    ::: /home/jules/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/wgpu-0.19.4/src/lib.rs:224:1
     |
 224 | pub struct Device {
     | ^^^^^^^^^^^^^^^^^ this is the found type `wgpu::Device`
     |
    ::: crates/mapmap-ui/src/lib.rs:39:5
     |
  39 | use imgui_wgpu::{Renderer, RendererConfig};
     |     ---------- one version of crate `wgpu` used here, as a dependency of crate `imgui_wgpu`
...
 118 |         device: &wgpu::Device,
     |                  ---- one version of crate `wgpu` used here, as a direct dependency of the current crate
     = help: you can use `cargo tree` to explore your dependency tree
note: two different versions of crate `wgpu` are being used; two types coming from two different versions of the same crate are different types even if they look the same
    --> /home/jules/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/wgpu-0.17.2/src/lib.rs:774:1
     |
 774 | pub struct RenderPass<'a> {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^ this is the expected type `wgpu::RenderPass`
     |
    ::: /home/jules/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/wgpu-0.19.4/src/lib.rs:920:1
     |
 920 | pub struct RenderPass<'a> {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^ this is the found type `wgpu::RenderPass`
     |
    ::: crates/mapmap-ui/src/lib.rs:39:5
     |
  39 | use imgui_wgpu::{Renderer, RendererConfig};
     |     ---------- one version of crate `wgpu` used here, as a dependency of crate `imgui_wgpu`
...
 118 |         device: &wgpu::Device,
     |                  ---- one version of crate `wgpu` used here, as a direct dependency of the current crate
     = help: you can use `cargo tree` to explore your dependency tree
note: method defined here
    --> /home/jules/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/imgui-wgpu-0.24.0/src/lib.rs:682:12
     |
 682 |     pub fn render<'r>(
     |            ^^^^^^

error[E0308]: mismatched types
    --> crates/mapmap-ui/src/lib.rs:133:29
     |
 133 |             texture_format: surface_format,
     |                             ^^^^^^^^^^^^^^ expected `wgpu_types::TextureFormat`, found `TextureFormat`
     |
note: two different versions of crate `wgpu_types` are being used; two types coming from two different versions of the same crate are different types even if they look the same
    --> /home/jules/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/wgpu-types-0.19.2/src/lib.rs:2286:1
     |
2286 | pub enum TextureFormat {
     | ^^^^^^^^^^^^^^^^^^^^^^ this is the found type `TextureFormat`
     |
    ::: /home/jules/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/wgpu-types-0.17.0/src/lib.rs:1940:1
     |
1940 | pub enum TextureFormat {
     | ^^^^^^^^^^^^^^^^^^^^^^ this is the expected type `wgpu_types::TextureFormat`
     |
    ::: crates/mapmap-ui/src/lib.rs:39:5
     |
  39 | use imgui_wgpu::{Renderer, RendererConfig};
     |     ---------- one version of crate `wgpu_types` used here, as a dependency of crate `wgpu_hal`
...
 118 |         device: &wgpu::Device,
     |                  ---- one version of crate `wgpu_types` used here, as a dependency of crate `wgpu_core`
     = help: you can use `cargo tree` to explore your dependency tree

Some errors have detailed explanations: E0063, E0308.
For more information about an error, try `rustc --explain E0063`.
error: could not compile `mapmap-ui` (lib) due to 5 previous errors
